# custom-kernel

./: .gitignore  Cargo.toml  Makefile  README.md
bootloader/: Makefile  boot.asm
kernel/: Makefile  boot.S  kernel.c  lib.rs  linker.ld  target.json  video.c  video.h  video.rs
kernel/.cargo/: config.toml
kernel/memory/: alloc.c  alloc.h  memory.rs  mmu.c  mod.rs
shared/: Makefile
shared/keyboard/: keys.h
shared/math/: math.h
shared/stdlib/: colors.h  string.c  string.h  types.h
